Fix weighted distance value being clipped by 100

That was the order of initialization order problem: the range of
the slider was initialized only after the value was set.

BUG:451874